@@ -39,7 +39,7 @@ xmore_SOURCES += \
         print.h
 endif
 
-appman_SOURCES = \
+appman_PRE = \
         xmore.man
 
 # App default files  (*.ad)
@@ -65,9 +65,9 @@ EXTRA_DIST += xmore.sgml
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES += $(appman_DATA)
 
 SED = sed
